fix: add --no-follow to docker logs and open java.util.regex for EvoMaster agent
Agent-Logs-Url: https://github.com/IverSyversen/Self-healing-API---Semester-Project-/sessions/e57ebb05-b00a-48dd-9f7d-b7b50dc8f1d5

Co-authored-by: CrustyClappyBlabby <126561061+CrustyClappyBlabby@users.noreply.github.com>